# enumsync

./: README.md  expected.py  pyproject.toml
.github/: release.yaml
.github/workflows/: ci.yml  release.yaml
examples/example1/: __init__.py
src/enumsync/: __init__.py  store.py  sync.py
tests/: test_sync.py
